--- a/khyeras/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/styles/khyeras_v1/template/header_buttons.html
@@ -6,7 +6,7 @@
 	</li>
 <!-- ENDDEFINE -->
 
-<ul class="welcome-buttons">
+<ul class="user-buttons">
 	<!-- IF S_REGISTERED_USER -->
 		<!-- EVENT navbar_header_profile_list_before -->
 		<!-- IF S_DISPLAY_PM -->
