--- a/khyeras/styles/khyeras_v1/template/header_extended.html
+++ b/khyeras/styles/khyeras_v1/template/header_extended.html
@@ -2,28 +2,34 @@
 	<div class="wrapper">
 		<div class="panel">
 			<div class="inner">
-				<div class="flex-row flex-row-20">
-					<div class="introduction flex-column">
-						<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
-						<p><a href="//google.com">Read more...</a></p>
+				<div class="flex-row flex-row-10">
+					<div class="site-callouts flex-column">
+						<p class="introduction">Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras – called "The Neverend" – unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="//google.com">Read more...</a></p>
+						<div class="flex-row flex-row-10">
+							<div class="flex-column">
+								<h5>Announcements</h5>
+								<ul>
+									<li><a href="/">Announcement #01</a></li>
+									<li><a href="/">Announcement #02</a></li>
+									<li><a href="/">Announcement #03</a></li>
+								</ul>
+							</div>
+							<div class="flex-column">
+								<h5>Events</h5>
+								<ul>
+									<li><a href="/">Event #01</a></li>
+									<li><a href="/">Event #02</a></li>
+									<li><a href="/">Event #03</a></li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<div class="flex-column">
-						<h5>Announcements</h5>
-						<ul>
-							<li><a href="/">Announcement #01</a></li>
-							<li><a href="/">Announcement #02</a></li>
-							<li><a href="/">Announcement #03</a></li>
-						</ul>
-						<h5>Events</h5>
-						<ul>
-							<li><a href="/">Event #01</a></li>
-							<li><a href="/">Event #02</a></li>
-							<li><a href="/">Event #03</a></li>
-						</ul>
+					<div class="user-profile flex-column">
+						{$DISPLAY_AVATAR}
+						{$DISPLAY_USERNAME}
+						<p>Group Name??</p>
 					</div>
 					<div class="user-information flex-column">
-						{$DISPLAY_USERNAME}
-						{$DISPLAY_AVATAR}
 						{$DISPLAY_TIME}
 						<!-- INCLUDE header_buttons.html -->
 						<!-- IF S_REGISTERED_USER -->
