--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -129,7 +129,7 @@ fieldset.display-actions {
 			margin: 0;
 			position: absolute;
 			bottom: 0;
-			right: 0;			
+			right: 0;
 		}
 	}
 }
@@ -392,7 +392,10 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 					@include sizing(20px, 20px);
 					line-height: 20px;
 					margin: 0 5px 0 0;
+					border-radius: 100%;
 					font-weight: bold;
+					position: relative;
+					top: -2px;
 				}
 				a strong {
 					font-weight: normal;
