--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -48,9 +48,19 @@ input[type='checkbox'], input[type='radio']  {
 	margin: 0 5px 0 0;
 }
 
-button[disabled], html input[disabled] {
+button[disabled], html input[disabled], option[disabled] {
 	cursor: not-allowed;
+	color: $color-13;
 }
+
+input[type='search']::-webkit-search-decoration, input[type='search']::-webkit-search-results-button, input[type='search']::-webkit-search-results-decoration {
+	display: none;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+	cursor: pointer;
+}
+
 
 /* Search Box
 ========================================================================== */
@@ -58,7 +68,7 @@ button[disabled], html input[disabled] {
 .search-box form fieldset {
 	position: relative;
 	padding: 0 130px 0 0;
-	input[type="search"] {
+	input[type='search'] {
 		margin: 0;
 	}
 	.button {
