Styles for forum welcome area and forum image

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -129,10 +129,10 @@
 
 		<!-- INCLUDE header_define.html -->
 
+		<!-- INCLUDE header_welcome.html -->
+
 		<!-- IF SCRIPT_NAME == 'index' -->
-			<!-- INCLUDE header_extended.html -->
-		<!-- ELSE -->
-			<!-- INCLUDE header_compact.html -->
+			<!-- INCLUDE header_featured.html -->
 		<!-- ENDIF -->
 
 		<!-- EVENT overall_header_page_body_before -->
