--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -522,10 +522,13 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 	margin: 0 0 20px 0;
 	.left-box, .right-box {
 		width: 50%;
+	}
+	.left-box {
 		float: left;
 	}
 	.right-box {
 		text-align: right;
+		float: right;
 		label, select, .button2 {
 			vertical-align: middle;
 		}
