--- a/khyeras/styles/khyeras_v1/template/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/header_welcome.html
@@ -1,4 +1,4 @@
-<section id="page-welcome" class="page-welcome header-extended">
+<section id="page-welcome" class="page-welcome">
 	<div class="wrapper">
 		<div class="panel">
 			<div class="inner">
@@ -27,7 +27,22 @@
 					<div class="user-profile flex-column">
 						{$DISPLAY_AVATAR}
 						{$DISPLAY_USERNAME}
-						<p>Group Name??</p>
+						<!-- TO DO: LOGIC FOR ALL OF THIS -->
+						<!-- GUEST BLOCK -->
+						<!-- <p>
+							Looks like you're not registered. Check out our boards, <a href="//google.com">read more on Khy'eras</a>, or <a href="{U_REGISTER}">sign up today</a>.
+						</p> -->
+						<!-- LOGGED IN USER BLOCK -->
+						<!-- <p>
+							Don't forget to check out the latest <a href="/viewforum.php?f=9">announcements</a> and <a href="//www.google.com">events</a>. Or, perhaps you're looking to add a new character? If so, don't forget to <a href="//www.google.com">link the account</a>.
+						</p> -->
+						<!-- CHARACTER BLOCK -->
+						<p class="character-level">Level 01</p>
+						<p class="character-stats">
+							<i class="icon rpg-icon rpg-crossed-swords"></i>
+							<span class="separator">/</span>
+							<i class="icon rpg-icon rpg-fairy"></i>
+						</p>
 					</div>
 					<div class="user-information flex-column">
 						{$DISPLAY_TIME}
@@ -37,50 +52,6 @@
 						<!-- ELSE -->
 							<!-- EVENT navbar_header_logged_out_content -->
 						<!-- ENDIF -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section id="featured-content" class="featured-content">
-	<div class="wrapper">
-		<div class="panel">
-			<div class="inner">
-				<div class="flex-row flex-row-10">
-					<div class="flex-column featured-title"><h5>Featured</h5></div>
-					<div class="flex-column featured-mvp">
-						<a href="//google.com">
-							<div class="image-wrap">
-								<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
-							</div>
-							<p>MVP: Deanna DiCorvino</p>
-						</a>
-					</div>
-					<div class="flex-column featured-story">
-						<a href="//google.com">
-							<div class="image-wrap">
-								<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
-							</div>
-							<p>Story: Best Thread Ever</p>
-						</a>
-					</div>
-					<div class="flex-column featured-lore">
-						<a href="//google.com">
-							<div class="image-wrap">
-								<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
-							</div>
-							<p>Lore: Dragons</p>
-						</a>
-					</div>
-					<div class="flex-column featured-event">
-						<a href="//google.com">
-							<div class="image-wrap">
-								<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
-							</div>
-							<p>Event: It's An Event</p>
-						</a>
 					</div>
 				</div>
 			</div>
