--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -177,10 +177,8 @@
 		.read-more {
 			font-style: italic;
 		}
-		.flex-row .flex-column {
-			ul {
-				margin: 0 0 20px 15px;
-			}
+		.flex-row .flex-column ul {
+			margin: 0 0 20px 14px;
 		}
 	}
 	.user-profile {
