--- a/khyeras/styles/khyeras_v1/template/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/header_welcome.html
@@ -5,24 +5,7 @@
 				<div class="flex-row flex-row-10">
 					<div class="site-callouts flex-column">
 						<p class="introduction">Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras – called "The Neverend" – unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="//google.com">Read more...</a></p>
-						<div class="flex-row flex-row-10">
-							<div class="flex-column">
-								<h5>Announcements</h5>
-								<ul>
-									<li><a href="/">Announcement #01</a></li>
-									<li><a href="/">Announcement #02</a></li>
-									<li><a href="/">Announcement #03</a></li>
-								</ul>
-							</div>
-							<div class="flex-column">
-								<h5>Events</h5>
-								<ul>
-									<li><a href="/">Event #01</a></li>
-									<li><a href="/">Event #02</a></li>
-									<li><a href="/">Event #03</a></li>
-								</ul>
-							</div>
-						</div>
+							<!-- INCLUDE header_links.html -->
 					</div>
 					<div class="user-profile flex-column">
 						{$DISPLAY_AVATAR}
