Fix forum icons and images and begin removal of default phpbb icons

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -57,6 +57,7 @@ $icon-skype: \f17e;
 $icon-sort-asc: \f0de;
 $icon-sort-desc: \f0dd;
 $icon-spinner: \f110;
+$icon-star: \f005;
 $icon-windows: \f17a;
 $icon-world: \f0ac;
 $icon-x: \f00d;
