--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -91,6 +91,14 @@
   	-moz-osx-font-smoothing: grayscale;
 }
 
+@mixin rpg-icons {
+	display: inline-block;
+  	font-family: 'Khyeras Icons';
+  	text-rendering: auto; /* optimizelegibility throws things off #1094 */
+  	-webkit-font-smoothing: antialiased;
+  	-moz-osx-font-smoothing: grayscale;
+}
+
 // Inline block
 @mixin inline-block($vertical-align) {
 	display: inline-block;
