--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -53,10 +53,16 @@
 		padding: 20px 20px 0 20px;
 		margin: 0 0 20px 0;
 	}
-	.topiclist.cplist {
-		margin: 0 0 20px 0;
-		& + br {
-			display: none;
+	.topiclist {
+		& + p > strong {
+			display: block;
+			margin: 20px;
+		}
+		&.cplist {
+			margin: 0 0 20px 0;
+			& + br {
+				display: none;
+			}
 		}
 	}
 	.topicreview {
@@ -149,6 +155,31 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 		}
 		&[onclick*='true']:before {
 			content: unicode($icon-check);
+		}
+	}
+}
+
+/* UCP - Front Page
+========================================================================== */
+
+.section-ucp-front-page .cp-main {
+	.topiclist {
+		position: relative;
+		&:before, &:after {
+			display: block;
+			background: $color-04;
+			padding: 10px 20px;
+		}
+		&:before {
+			content: 'Title';
+			padding-right: 270px;
+		}
+		&:after {
+			content: 'Last Post';
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 230px;
 		}
 	}
 }
