--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -25,11 +25,12 @@ $color-07: #7ea8c2; // blue
 $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
 $color-10: #1c2f25; // dark green
-$color-11: #d31141; // red
+$color-11: #b30832; // red
 $color-12: #777777; // gray
 $color-13: #aaaaaa; // gray
 $color-14: #f0a06a; // orange
 $color-15: #5e6c85; // blue gray
+$color-16: #591818; // red
 
 /* Fonts
 ========================================================================== */
