--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -48,6 +48,8 @@ $font-03: 'Selima', $sans-serif-fb;
 $icon-check: \f00c;
 $icon-check-circle: \f058;
 $icon-envelope: \f0e0;
+$icon-exclamation: \f12a;
+$icon-exclamation-circle: \f06a;
 $icon-exclamation-triangle: \f071;
 $icon-facebook: \f09a;
 $icon-gplus: \f0d5;
