--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -231,70 +231,6 @@
 	}
 }
 
-/* Forums & Topic Icons
-========================================================================== */
-
-.forum_link, .topic_moved {
-	&:before {
-		content: unicode($icon-direction-sign);
-	}
-}
-
-.forum_read_locked, .forum_unread_locked, .topic_read_locked, .topic_read_locked_mine,
-.topic_unread_locked, .topic_unread_locked_mine {
-	&:before {
-		content: unicode($icon-padlock);
-	}
-}
-
-.forum_read, .forum_read_subforum {
-	&:before {
-		content: unicode($icon-book-cover-02);
-	}
-}
-
-.forum_unread, .forum_unread_subforum {
-	&:before {
-		content: unicode($icon-book-cover);
-	}
-}
-
-.topic_read, .topic_read_mine, .topic_read_hot, .topic_read_hot_mine, .pm_read {
-	&:before {
-		content: unicode($icon-tied-scroll);
-	}
-}
-
-.topic_unread, .topic_unread_mine, .topic_unread_hot, .topic_unread_hot_mine, .pm_unread {
-	&:before {
-		content: unicode($icon-scroll-unfurled);
-	}
-}
-
-.global_read, .global_read_mine, .global_read_locked,
-.global_read_locked_mine,.global_unread, .global_unread_mine,
-.global_unread_locked, .global_unread_locked_mine {
-	&:before {
-		content: unicode($icon-compass);
-	}
-}
-
-.announce_read, .announce_read_mine, .announce_read_locked,
-.announce_read_locked_mine, .announce_unread, .announce_unread_mine,
-.announce_unread_locked, .announce_unread_locked_mine {
-	&:before {
-		content: unicode($icon-hunting-horn);
-	}
-}
-
-.sticky_read, .sticky_read_mine, .sticky_read_locked,
-.sticky_read_locked_mine, .sticky_unread, .sticky_unread_mine,
-.sticky_unread_locked, .sticky_unread_locked_mine {
-	&:before {
-		content: unicode($icon-stabbed-note);
-	}
-}
-
 /* Table Listings
 ========================================================================== */
 
@@ -364,17 +300,96 @@ table {
 	}
 }
 
+/* Forums & Topic Icons
+========================================================================== */
+
+.forum_link, .topic_moved {
+	&:before {
+		content: unicode($icon-direction-sign);
+	}
+}
+
+.forum_read_locked, .forum_unread_locked, .topic_read_locked, .topic_read_locked_mine,
+.topic_unread_locked, .topic_unread_locked_mine {
+	&:before {
+		content: unicode($icon-padlock);
+	}
+}
+
+.forum_read, .forum_read_subforum {
+	&:before {
+		content: unicode($icon-book-cover-02);
+	}
+}
+
+.forum_unread, .forum_unread_subforum {
+	&:before {
+		content: unicode($icon-book-cover);
+	}
+}
+
+.topic_read, .topic_read_mine, .topic_read_hot, .topic_read_hot_mine, .pm_read {
+	&:before {
+		content: unicode($icon-tied-scroll);
+	}
+}
+
+.topic_unread, .topic_unread_mine, .topic_unread_hot, .topic_unread_hot_mine, .pm_unread {
+	&:before {
+		content: unicode($icon-scroll-unfurled);
+	}
+}
+
+.global_read, .global_read_mine, .global_read_locked,
+.global_read_locked_mine,.global_unread, .global_unread_mine,
+.global_unread_locked, .global_unread_locked_mine {
+	&:before {
+		content: unicode($icon-compass);
+	}
+}
+
+.announce_read, .announce_read_mine, .announce_read_locked,
+.announce_read_locked_mine, .announce_unread, .announce_unread_mine,
+.announce_unread_locked, .announce_unread_locked_mine {
+	&:before {
+		content: unicode($icon-hunting-horn);
+	}
+}
+
+.sticky_read, .sticky_read_mine, .sticky_read_locked,
+.sticky_read_locked_mine, .sticky_unread, .sticky_unread_mine,
+.sticky_unread_locked, .sticky_unread_locked_mine {
+	&:before {
+		content: unicode($icon-stabbed-note);
+	}
+}
+
 /* Forum Rules
 ========================================================================== */
 
 .rules {
-	margin: 0 0 20px 0;
-	.inner strong:first-child {
-		display: block;
-		margin: 0 0 20px 0;
-		font-size: rem(16px);
-		& + br {
-			display: none;
+	margin: 20px 0;
+	padding: 20px 0;
+	border-top: 1px solid $color-04;
+	border-bottom: 1px solid $color-04;
+	.inner {
+		strong:first-child {
+			margin: 0 0 20px 0;
+			font-size: rem(16px);
+			display: block;
+			&:before {
+				@include font-awesome;
+				content: unicode($icon-exclamation-circle);
+				font-size: rem(22px);
+				padding-right: 10px;
+				transform: rotate(-20deg);
+			}
+			& + br {
+				display: none;
+			}
+		}
+		& > :last-child {
+			margin-bottom: 0;
 		}
 	}
 }
