Remove and update javascript

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -20,7 +20,6 @@
 @import 'typography';
 @import 'rpg-icons';
 @import 'form-fields';
-// @import 'vendors';
 @import 'layout';
 @import 'viewlisting';
 @import 'viewtopic';
@@ -29,4 +28,4 @@
 @import 'cp';
 @import 'header';
 @import 'footer';
-// @import 'responsive';
+@import 'responsive';
