--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -2,4 +2,15 @@
 ========================================================================== */
 
 @include respond(em(768)) {
+	// header.scss
+	.mobile-menu-button, #mobile-menu {
+		display: block;
+	}
+	.mobile-open {
+		position: relative;
+		overflow: hidden;
+	}
+	html.mobile-open {
+	    height: 100%;
+	}
 }
