--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -81,6 +81,13 @@
 
 		<header id="page-header">
 			<!-- EVENT overall_header_navbar_before -->
+			<div class="mobile-menu-button">Open Mobile</div>
+			<nav id="mobile-menu">
+				<header class="mobile-menu-header">
+					<span class="mobile-header">Menu</span>
+					<i class="icon fa fa-times" aria-hidden="true"></i>
+				</header>				
+			</nav>
 			<!-- INCLUDE navbar_header.html -->
 			<div class="headerbar" role="banner">
 				<!-- EVENT overall_header_headerbar_before -->
